--- a/smart-shopping/src/main/resources/application.properties
+++ b/smart-shopping/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=smart-shopping
+
+server.port = 9193
+
+spring.datasource.url=jdbc:mysql://localhost:3306/smart_shopping_db
+spring.datasource.username=root
+spring.datasource.password=Sameera@E20
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa,properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+##(create, update, create-drop, validate)
+spring.jpa.hibernate.ddl-auto=update
